...
        fileTableView.headerView = NSTableHeaderView()
        fileTableView.doubleAction = #selector(fileDoubleClicked(_:))
        fileTableView.target = self

        // Context menu
        let menu = NSMenu()
        menu.addItem(NSMenuItem(title: "Revert", action: #selector(contextRevert(_:)), keyEquivalent: ""))
        menu.addItem(NSMenuItem(title: "Delete", action: #selector(contextDelete(_:)), keyEquivalent: ""))
        fileTableView.menu = menu

        scrollView.documentView = fileTableView
        contentView.addSubview(scrollView)
        
        // Buttons
        let commitButton = NSButton(title: "Commit", target: self, action: #selector(doCommit(_:)))
        commitButton.frame = NSRect(x: 600, y: 10, width: 90, height: 32)
        commitButton.autoresizingMask = [.minXMargin, .maxYMargin]
        commitButton.bezelStyle = .rounded
        commitButton.keyEquivalent = "\r"
        contentView.addSubview(commitButton)
        
...
